proyecto2/python_grammarParser.py
# Generated from python_grammar.g4 by ANTLR 4.11.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class python_grammarParser ( Parser ):

    grammarFileName = "python_grammar.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'dict'", "'list'", "'tuple'", "'lambda'", 
                     "'or'", "'and'", "'=='", "'!='", "'>'", "'<'", "'>='", 
                     "'<='", "'+'", "'-'", "'*'", "<INVALID>", "'%'", "'**'", 
                     "'not'", "<INVALID>", "'='", "'('", "')'", "'{'", "'}'", 
                     "'['", "']'", "','", "':'", "'True'", "'False'", "'None'", 
                     "'if'", "'else'", "'elif'", "'while'", "'print'", "'for'", 
                     "'in'", "'def'", "'return'", "'import'", "'from'", 
                     "'todo'", "'.'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "LAMBDA", "OR", "AND", "EQ", "NEQ", "GT", "LT", "GTEQ", 
                      "LTEQ", "PLUS", "MINUS", "MULT", "DIV", "MOD", "POW", 
                      "NOT", "TYPES", "ASSIGN", "OPAR", "CPAR", "OBRACE", 
                      "CBRACE", "OKEY", "CKEY", "COMMA", "POINTS", "TRUE", 
                      "FALSE", "NULL", "IF", "ELSE", "ELIF", "WHILE", "LOG", 
                      "FOR", "IN", "FUNCION", "RETORNO", "IMPORT", "FROM", 
                      "ASTERISC", "POINT", "ID", "INT", "FLOAT", "STRING", 
                      "COMMENT", "SPACE", "NEWLINE", "OTHER" ]

    RULE_parse = 0
    RULE_from_input = 1
    RULE_from_file = 2
    RULE_stat = 3
    RULE_compound_stat = 4
    RULE_simple_stat = 5
    RULE_assignment = 6
    RULE_if_stat = 7
    RULE_while_stat = 8
    RULE_for_stat = 9
    RULE_log = 10
    RULE_funcion = 11
    RULE_importar = 12
    RULE_call_function = 13
    RULE_retornar = 14
    RULE_condition_block = 15
    RULE_stat_block = 16
    RULE_array = 17
    RULE_tuple = 18
    RULE_accessarray = 19
    RULE_type_anotation = 20
    RULE_variable = 21
    RULE_parametro = 22
    RULE_expr = 23
    RULE_atom = 24
    RULE_lambda_func = 25
    RULE_objeto = 26
    RULE_keyvalue = 27

    ruleNames =  [ "parse", "from_input", "from_file", "stat", "compound_stat", 
                   "simple_stat", "assignment", "if_stat", "while_stat", 
                   "for_stat", "log", "funcion", "importar", "call_function", 
                   "retornar", "condition_block", "stat_block", "array", 
                   "tuple", "accessarray", "type_anotation", "variable", 
                   "parametro", "expr", "atom", "lambda_func", "objeto", 
                   "keyvalue" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    LAMBDA=4
    OR=5
    AND=6
    EQ=7
    NEQ=8
    GT=9
    LT=10
    GTEQ=11
    LTEQ=12
    PLUS=13
    MINUS=14
    MULT=15
    DIV=16
    MOD=17
    POW=18
    NOT=19
    TYPES=20
    ASSIGN=21
    OPAR=22
    CPAR=23
    OBRACE=24
    CBRACE=25
    OKEY=26
    CKEY=27
    COMMA=28
    POINTS=29
    TRUE=30
    FALSE=31
    NULL=32
    IF=33
    ELSE=34
    ELIF=35
    WHILE=36
    LOG=37
    FOR=38
    IN=39
    FUNCION=40
    RETORNO=41
    IMPORT=42
    FROM=43
    ASTERISC=44
    POINT=45
    ID=46
    INT=47
    FLOAT=48
    STRING=49
    COMMENT=50
    SPACE=51
    NEWLINE=52
    OTHER=53

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.11.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ParseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def from_input(self):
            return self.getTypedRuleContext(python_grammarParser.From_inputContext,0)


        def from_file(self):
            return self.getTypedRuleContext(python_grammarParser.From_fileContext,0)


        def getRuleIndex(self):
            return python_grammarParser.RULE_parse

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParse" ):
                listener.enterParse(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParse" ):
                listener.exitParse(self)




    def parse(self):

        localctx = python_grammarParser.ParseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_parse)
        try:
            self.state = 58
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 56
                self.from_input()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 57
                self.from_file()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class From_inputContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stat(self):
            return self.getTypedRuleContext(python_grammarParser.StatContext,0)


        def NEWLINE(self):
            return self.getToken(python_grammarParser.NEWLINE, 0)

        def getRuleIndex(self):
            return python_grammarParser.RULE_from_input

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFrom_input" ):
                listener.enterFrom_input(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFrom_input" ):
                listener.exitFrom_input(self)




    def from_input(self):

        localctx = python_grammarParser.From_inputContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_from_input)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 60
            self.stat()
            self.state = 61
            self.match(python_grammarParser.NEWLINE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class From_fileContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(python_grammarParser.EOF, 0)

        def stat(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(python_grammarParser.StatContext)
            else:
                return self.getTypedRuleContext(python_grammarParser.StatContext,i)


        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(python_grammarParser.NEWLINE)
            else:
                return self.getToken(python_grammarParser.NEWLINE, i)

        def getRuleIndex(self):
            return python_grammarParser.RULE_from_file

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFrom_file" ):
                listener.enterFrom_file(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFrom_file" ):
                listener.exitFrom_file(self)




    def from_file(self):

        localctx = python_grammarParser.From_fileContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_from_file)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 67
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while ((_la) & ~0x3f) == 0 and ((1 << _la) & 14583319952883712) != 0:
                self.state = 65
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [20, 21, 22, 24, 26, 30, 31, 32, 33, 36, 37, 38, 40, 41, 42, 43, 46, 47, 48, 49, 53]:
                    self.state = 63
                    self.stat()
                    pass
                elif token in [52]:
                    self.state = 64
                    self.match(python_grammarParser.NEWLINE)
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 69
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 70
            self.match(python_grammarParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def simple_stat(self):
            return self.getTypedRuleContext(python_grammarParser.Simple_statContext,0)


        def compound_stat(self):
            return self.getTypedRuleContext(python_grammarParser.Compound_statContext,0)


        def getRuleIndex(self):
            return python_grammarParser.RULE_stat

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStat" ):
                listener.enterStat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStat" ):
                listener.exitStat(self)




    def stat(self):

        localctx = python_grammarParser.StatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_stat)
        try:
            self.state = 74
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [20, 21, 22, 24, 26, 30, 31, 32, 37, 41, 42, 43, 46, 47, 48, 49, 53]:
                self.enterOuterAlt(localctx, 1)
                self.state = 72
                self.simple_stat()
                pass
            elif token in [33, 36, 38, 40]:
                self.enterOuterAlt(localctx, 2)
                self.state = 73
                self.compound_stat()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Compound_statContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def if_stat(self):
            return self.getTypedRuleContext(python_grammarParser.If_statContext,0)


        def while_stat(self):
            return self.getTypedRuleContext(python_grammarParser.While_statContext,0)


        def for_stat(self):
            return self.getTypedRuleContext(python_grammarParser.For_statContext,0)


        def funcion(self):
            return self.getTypedRuleContext(python_grammarParser.FuncionContext,0)


        def getRuleIndex(self):
            return python_grammarParser.RULE_compound_stat

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCompound_stat" ):
                listener.enterCompound_stat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCompound_stat" ):
                listener.exitCompound_stat(self)




    def compound_stat(self):

        localctx = python_grammarParser.Compound_statContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_compound_stat)
        try:
            self.state = 80
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [33]:
                self.enterOuterAlt(localctx, 1)
                self.state = 76
                self.if_stat()
                pass
            elif token in [36]:
                self.enterOuterAlt(localctx, 2)
                self.state = 77
                self.while_stat()
                pass
            elif token in [38]:
                self.enterOuterAlt(localctx, 3)
                self.state = 78
                self.for_stat()
                pass
            elif token in [40]:
                self.enterOuterAlt(localctx, 4)
                self.state = 79
                self.funcion()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Simple_statContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignment(self):
            return self.getTypedRuleContext(python_grammarParser.AssignmentContext,0)


        def log(self):
            return self.getTypedRuleContext(python_grammarParser.LogContext,0)


        def importar(self):
            return self.getTypedRuleContext(python_grammarParser.ImportarContext,0)


        def retornar(self):
            return self.getTypedRuleContext(python_grammarParser.RetornarContext,0)


        def atom(self):
            return self.getTypedRuleContext(python_grammarParser.AtomContext,0)


        def NEWLINE(self):
            return self.getToken(python_grammarParser.NEWLINE, 0)

        def OTHER(self):
            return self.getToken(python_grammarParser.OTHER, 0)

        def getRuleIndex(self):
            return python_grammarParser.RULE_simple_stat

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSimple_stat" ):
                listener.enterSimple_stat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSimple_stat" ):
                listener.exitSimple_stat(self)




    def simple_stat(self):

        localctx = python_grammarParser.Simple_statContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_simple_stat)
        try:
            self.state = 90
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 82
                self.assignment()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 83
                self.log()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 84
                self.importar()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 85
                self.retornar()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 86
                self.atom()
                self.state = 87
                self.match(python_grammarParser.NEWLINE)
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 89
                self.match(python_grammarParser.OTHER)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variable(self):
            return self.getTypedRuleContext(python_grammarParser.VariableContext,0)


        def ASSIGN(self):
            return self.getToken(python_grammarParser.ASSIGN, 0)

        def assignment(self):
            return self.getTypedRuleContext(python_grammarParser.AssignmentContext,0)


        def expr(self):
            return self.getTypedRuleContext(python_grammarParser.ExprContext,0)


        def POINTS(self):
            return self.getToken(python_grammarParser.POINTS, 0)

        def type_anotation(self):
            return self.getTypedRuleContext(python_grammarParser.Type_anotationContext,0)


        def getRuleIndex(self):
            return python_grammarParser.RULE_assignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignment" ):
                listener.enterAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignment" ):
                listener.exitAssignment(self)




    def assignment(self):

        localctx = python_grammarParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_assignment)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            self.variable()
            self.state = 95
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==29:
                self.state = 93
                self.match(python_grammarParser.POINTS)
                self.state = 94
                self.type_anotation()


            self.state = 97
            self.match(python_grammarParser.ASSIGN)
            self.state = 100
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.state = 98
                self.assignment()
                pass

            elif la_ == 2:
                self.state = 99
                self.expr(0)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class If_statContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(python_grammarParser.IF, 0)

        def condition_block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(python_grammarParser.Condition_blockContext)
            else:
                return self.getTypedRuleContext(python_grammarParser.Condition_blockContext,i)


        def ELIF(self, i:int=None):
            if i is None:
                return self.getTokens(python_grammarParser.ELIF)
            else:
                return self.getToken(python_grammarParser.ELIF, i)

        def ELSE(self):
            return self.getToken(python_grammarParser.ELSE, 0)

        def POINTS(self):
            return self.getToken(python_grammarParser.POINTS, 0)

        def stat_block(self):
            return self.getTypedRuleContext(python_grammarParser.Stat_blockContext,0)


        def getRuleIndex(self):
            return python_grammarParser.RULE_if_stat

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIf_stat" ):
                listener.enterIf_stat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIf_stat" ):
                listener.exitIf_stat(self)




    def if_stat(self):

        localctx = python_grammarParser.If_statContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_if_stat)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            self.match(python_grammarParser.IF)
            self.state = 103
            self.condition_block()
            self.state = 108
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,8,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 104
                    self.match(python_grammarParser.ELIF)
                    self.state = 105
                    self.condition_block() 
                self.state = 110
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,8,self._ctx)

            self.state = 114
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.state = 111
                self.match(python_grammarParser.ELSE)
                self.state = 112
                self.match(python_grammarParser.POINTS)
                self.state = 113
                self.stat_block()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class While_statContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHILE(self):
            return self.getToken(python_grammarParser.WHILE, 0)

        def expr(self):
            return self.getTypedRuleContext(python_grammarParser.ExprContext,0)


        def POINTS(self):
            return self.getToken(python_grammarParser.POINTS, 0)

        def stat_block(self):
            return self.getTypedRuleContext(python_grammarParser.Stat_blockContext,0)


        def getRuleIndex(self):
            return python_grammarParser.RULE_while_stat

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhile_stat" ):
                listener.enterWhile_stat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhile_stat" ):
                listener.exitWhile_stat(self)




    def while_stat(self):

        localctx = python_grammarParser.While_statContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_while_stat)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 116
            self.match(python_grammarParser.WHILE)
            self.state = 117
            self.expr(0)
            self.state = 118
            self.match(python_grammarParser.POINTS)
            self.state = 119
            self.stat_block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class For_statContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FOR(self):
            return self.getToken(python_grammarParser.FOR, 0)

        def ID(self):
            return self.getToken(python_grammarParser.ID, 0)

        def IN(self):
            return self.getToken(python_grammarParser.IN, 0)

        def expr(self):
            return self.getTypedRuleContext(python_grammarParser.ExprContext,0)


        def POINTS(self):
            return self.getToken(python_grammarParser.POINTS, 0)

        def stat_block(self):
            return self.getTypedRuleContext(python_grammarParser.Stat_blockContext,0)


        def getRuleIndex(self):
            return python_grammarParser.RULE_for_stat

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFor_stat" ):
                listener.enterFor_stat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFor_stat" ):
                listener.exitFor_stat(self)




    def for_stat(self):

        localctx = python_grammarParser.For_statContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_for_stat)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 121
            self.match(python_grammarParser.FOR)
            self.state = 122
            self.match(python_grammarParser.ID)
            self.state = 123
            self.match(python_grammarParser.IN)
            self.state = 124
            self.expr(0)
            self.state = 125
            self.match(python_grammarParser.POINTS)
            self.state = 126
            self.stat_block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LogContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LOG(self):
            return self.getToken(python_grammarParser.LOG, 0)

        def OPAR(self):
            return self.getToken(python_grammarParser.OPAR, 0)

        def expr(self):
            return self.getTypedRuleContext(python_grammarParser.ExprContext,0)


        def CPAR(self):
            return self.getToken(python_grammarParser.CPAR, 0)

        def getRuleIndex(self):
            return python_grammarParser.RULE_log

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLog" ):
                listener.enterLog(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLog" ):
                listener.exitLog(self)




    def log(self):

        localctx = python_grammarParser.LogContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_log)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 128
            self.match(python_grammarParser.LOG)
            self.state = 129
            self.match(python_grammarParser.OPAR)
            self.state = 130
            self.expr(0)
            self.state = 131
            self.match(python_grammarParser.CPAR)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNCION(self):
            return self.getToken(python_grammarParser.FUNCION, 0)

        def ID(self):
            return self.getToken(python_grammarParser.ID, 0)

        def OPAR(self):
            return self.getToken(python_grammarParser.OPAR, 0)

        def CPAR(self):
            return self.getToken(python_grammarParser.CPAR, 0)

        def POINTS(self, i:int=None):
            if i is None:
                return self.getTokens(python_grammarParser.POINTS)
            else:
                return self.getToken(python_grammarParser.POINTS, i)

        def MINUS(self):
            return self.getToken(python_grammarParser.MINUS, 0)

        def GT(self):
            return self.getToken(python_grammarParser.GT, 0)

        def type_anotation(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(python_grammarParser.Type_anotationContext)
            else:
                return self.getTypedRuleContext(python_grammarParser.Type_anotationContext,i)


        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(python_grammarParser.NEWLINE)
            else:
                return self.getToken(python_grammarParser.NEWLINE, i)

        def stat(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(python_grammarParser.StatContext)
            else:
                return self.getTypedRuleContext(python_grammarParser.StatContext,i)


        def parametro(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(python_grammarParser.ParametroContext)
            else:
                return self.getTypedRuleContext(python_grammarParser.ParametroContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(python_grammarParser.COMMA)
            else:
                return self.getToken(python_grammarParser.COMMA, i)

        def getRuleIndex(self):
            return python_grammarParser.RULE_funcion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncion" ):
                listener.enterFuncion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncion" ):
                listener.exitFuncion(self)




    def funcion(self):

        localctx = python_grammarParser.FuncionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_funcion)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 133
            self.match(python_grammarParser.FUNCION)
            self.state = 134
            self.match(python_grammarParser.ID)
            self.state = 135
            self.match(python_grammarParser.OPAR)
            self.state = 152
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==46:
                self.state = 136
                self.parametro()
                self.state = 139
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==29:
                    self.state = 137
                    self.match(python_grammarParser.POINTS)
                    self.state = 138
                    self.type_anotation()


                self.state = 149
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==28:
                    self.state = 141
                    self.match(python_grammarParser.COMMA)

                    self.state = 142
                    self.parametro()
                    self.state = 145
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if _la==29:
                        self.state = 143
                        self.match(python_grammarParser.POINTS)
                        self.state = 144
                        self.type_anotation()


                    self.state = 151
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 154
            self.match(python_grammarParser.CPAR)
            self.state = 158
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==14:
                self.state = 155
                self.match(python_grammarParser.MINUS)
                self.state = 156
                self.match(python_grammarParser.GT)
                self.state = 157
                self.type_anotation()

